--- a/index.html
+++ b/index.html
@@ -6,31 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
-    <style>
-        body {
-            padding: 0;
-            margin: 10px;
-            background: rgb(40, 40, 40);
-        }
-        
-        h1 {
-            font-size: 2.1rem;
-            line-height: 1.4;
-            letter-spacing: 0.5rem;
-            color: rgb(255, 255, 255);
-            margin: 10px;
-            margin-bottom: 0px;
-            text-align: center;
-        }
-        
-        #score {
-            color: white;
-            padding: 0;
-            margin: 0px;
-            margin-bottom: 5px;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script> -->
     <script src="p5.js"></script>
     <script src="sketch.js"></script>
     <script src="snake.js"></script>
