--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="p5.js"></script>
     <script src="sketch.js"></script>
     <script src="snake.js"></script>
-    <link rel="shortcut icon" href="https://img-premium.flaticon.com/png/512/2995/premium/2995730.png?token=exp=1631048677~hmac=73b9a04dd11cea26925ec6cb8e265271" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 
 <body>
