--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="p5.js"></script>
     <script src="sketch.js"></script>
     <script src="snake.js"></script>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
