--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game</title>
     <link rel="stylesheet" type="text/css" href="assets/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script> -->
-    <!-- <script src="p5.js"></script> -->
-    <script src="assets/sketch.js"></script>
-    <script src="assets/snake.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    <title>Snake Game</title>
 </head>
 
 <body>
-    <main>
+    <div class="container">
         <h1>Snake Game</h1>
-        <p id="score"></p>
-    </main>
+        <p> 🎯Objective: Eat the red square <br> 💀DONT hit the borders or the snake body </p><br>
+        <p id="score">Score: 0&nbsp;&nbsp;&nbsp;&nbsp;High Score: 0</p>
+    </div>
+    <script type="text/javascript" src="assets/sketch.js"></script>
+    <script type="text/javascript" src="assets/snake.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/p5.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.dom.js"></script>
 </body>
 <!-- Made by Akshat Aggarwal :) -->
 
